@@ -36,6 +36,7 @@ VersionInfoProperties versionInfoProperties, SecurityStateBean securityStateBean
 ** stopAll
 ** getStepNamesForJob
 * The following deprecated `Converters` have been removed from SCDF: `AbstractDateTimeConverter`, `DateToStringConverter`, and `StringToDateConverter`.  Use the converters provided by Spring Batch.
+* `DockerComposeRule.waitingForService(String serviceName, HealthCheck<Container> healthCheck)` has been replaced by `DockerComposeRule.waitingForService(String serviceName, HealthCheck<Container> healthCheck, ReadableDuration timeout)`.
 
 
 === Breaking Changes
